--- a/login.html
+++ b/login.html
@@ -16,33 +16,33 @@
 
     <main>
       <!--Contenedor General -->
-      <div class="contenedor__todo">
+      <div class="contenedorTodo">
         <!--Contenedor trasero General-->
-        <div class="caja__trasera">
+        <div class="cajaTrasera">
           <!--Caja trasera Login-->
-          <div class="caja__trasera-login">
+          <div class="cajaTraseraLogin">
             <h3>¿Ya tienes una Cuenta?</h3>
             <p>Inicia sesión para entrar en la página</p>
-            <button id="bnt__iniciar-sesion">Iniciar Sesìon</button>
+            <button id="bntIniciarSesion">Iniciar Sesìon</button>
           </div>
           <!--Caja trasera Registro -->
-          <div class="caja__trasera-register">
+          <div class="cajaTraseraRegister">
             <h3>¿Aun no tienes una cuenta?</h3>
             <p>Regístrate para que puedas iniciar sesiòn</p>
-            <button id="bnt__Regístrarse">Regístrarse</button>
+            <button id="bntRegistrarse">Regístrarse</button>
           </div>
         </div>
         <!--Formulario de Login y Registro  -->
-        <div class="contenedor__login-register">
+        <div class="contenedorLoginRegister">
           <!--Login-->
-          <form action="" class="formulario__login">
+          <form action="" class="formularioLogin">
             <h2>Iniciar Sesión</h2>
             <input id="" type="text" placeholder="Correo Electronico" />
             <input id="" type="password" placeholder="Contraseña" />
             <button>Entrar</button>
           </form>
           <!--Registro-->
-          <form action="" class="formulario__register">
+          <form action="" class="formularioRegister">
             <h2>Registrarse</h2>
             <input id="nombre" type="text" placeholder="Nombre Completo" />
             <input id="email" type="text" placeholder="Correo Electronico" />
