--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <body>
       <h1 class="logo"><strong>TRUTH-CAMBIOS</strong><h1>
       <hr />
-      <a href="index.html">INICIO </a> 
-      <a href="login.html">INICIO DE SESIÓN </a> 
-      <a href="#">NOSOTROS</a> 
+      <a class="navegacion" href="index.html">INICIO </a> 
+      <a class="navegacion"  href="login.html">INICIO DE SESIÓN </a> 
+      <a class="navegacion"  href="#">NOSOTROS</a> 
 
       <h3 class="bienvenida">BIENVENIDOS A TU CAMBIO </h3>
       <h3 class="bienvenida">WELCOME TO YOUR CHANGE </h3>
